--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -13,7 +13,7 @@ spec:
 
 ---
 
-apiVersion: extensions/v1beta1
+apiVersion: extensions/v1beta
 kind: Deployment
 metadata:
   name: train-schedule-deployment
